frontend/src/scss/tailwind.scss
// This will eventually be replaced by tailwind

.flex {
  display: flex;
}

.whitespace-normal {
  white-space: normal;
}

.w-0 {
  width: 0;
}

.gap-1 {
  gap: 4px;
}

.gap-x-1 {
  column-gap: 4px;
}

.gap-2 {
  gap: 8px;
}

.gap-x-2 {
  column-gap: 8px;
}

.gap-4 {
  gap: 16px;
}

.gap-x-4 {
  column-gap: 16px;
}

.z-10 {
  z-index: 10;
}

.flex-wrap-reverse {
  flex-wrap: wrap-reverse;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-items-start {
  justify-items: start;
}

.justify-content-between {
  justify-content: space-between;
}

.opacity-60 {
  opacity: 0.6;
}

.italic {
  font-style: italic;
}

.text-inherit {
  color: inherit;
}

.uppercase {
  text-transform: uppercase;
}

